--- a/index.html
+++ b/index.html
@@ -1,104 +1,88 @@
 <!DOCTYPE html>
+<html lang="en"> 
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Academic Proxy Tool</title>
+    <title>Virus Checker</title>
     <style>
         body {
-            font-family: 'Arial', sans-serif;
-            background-color: #f4f4f4; /* Lighter background for a professional look */
-            color: #333; /* Darker text for better readability */
+            font-family: Arial, sans-serif;
+            background-color: #121212;
+            color: white;
             text-align: center;
             margin: 0;
             padding: 0;
-        }
-        
-        header {
-            background-color: #003366; /* School-like blue color */
-            color: #ffffff;
-            padding: 20px;
-            font-size: 1.5rem;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
         }
 
         h1 {
             font-size: 2.5rem;
-            margin: 0;
         }
 
         .container {
-            background: #ffffff; /* White background for main content */
-            padding: 30px;
-            margin-top: 20px;
-            border-radius: 8px;
-            box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
-            width: 80%;
-            max-width: 600px;
-            margin-bottom: 40px;
-        }
-
-        p {
-            font-size: 1rem;
-            margin-bottom: 20px;
+            background: #1E1E1E;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0px 4px 10px rgba(255, 255, 255, 0.1);
+            width: 90%;
+            max-width: 500px;
         }
 
         input {
-            width: 100%;
+            width: 80%;
             padding: 10px;
             font-size: 1rem;
-            border: 1px solid #ccc;
+            border: none;
             border-radius: 5px;
             outline: none;
-            margin-bottom: 20px;
-            box-sizing: border-box;
+            margin-top: 10px;
         }
 
         button {
-            background-color: #007BFF; /* A professional blue button */
+            background: #03A9F4;
             color: white;
-            font-size: 1.1rem;
-            padding: 12px 20px;
+            font-size: 1rem;
+            padding: 10px 15px;
             border: none;
             border-radius: 5px;
             cursor: pointer;
-            transition: background-color 0.3s;
+            margin-top: 10px;
         }
 
         button:hover {
-            background-color: #0056b3; /* Darker blue on hover */
+            background: #0288D1;
         }
 
         footer {
-            margin-top: 40px;
+            margin-top: 20px;
             font-size: 0.9rem;
-            opacity: 0.7;
+            opacity: 0.6;
         }
     </style>
 </head>
 <body>
 
-    <header>
-        <h1>Academic Proxy Tool</h1>
-        <p>Access the resources you need for your academic work.</p>
-    </header>
-
+    <h1>Web Proxy</h1>
     <div class="container">
         <p>Enter the website URL you want to access:</p>
-        <input type="text" id="urlInput" placeholder="Enter URL here (e.g., https://example.com)">
-        <button onclick="openProxy()">Access</button>
+        <input type="text" id="urlInput" placeholder="https://example.com">
+        <button onclick="openProxy()">Go</button>
     </div>
 
-    <footer>
-        <p>Powered by GitHub Pages & Cloudflare Workers. Designed for educational purposes.</p>
-    </footer>
+    <footer>Powered by concentrated autism</footer>
 
     <script>
         function openProxy() {
             let url = document.getElementById("urlInput").value;
             if (!url.startsWith("http")) {
-                url = "https://" + url; // Ensure URL is correctly formatted
+                url = "https://" + url; // Ensure correct format
             }
-            // Redirect to the proxy with the given URL as a parameter
+            // Pass the URL as a query parameter to the Cloudflare Worker
             window.location.href = "https://wandering-brook-a82e.riley-berry2109.workers.dev/?url=" + encodeURIComponent(url);
         }
     </script>
