--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
 
     <h1>Web Proxy</h1>
     <!-- Image added here -->
-<img id="headerImage" src="https://raw.githubusercontent.com/Rileg21/Year12Work/main/dlrrecords.png" alt="Your Image">
+<img id="headerImage" src="dlrrecords.png" alt="Your Image">
 
     <div class="container">
         <p>Enter the website URL you want to access:</p>
