--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         </div>
     </div>
 
-    <footer>Powered by GitHub Pages & Cloudflare Workers</footer>
+    <footer>Powered by concentrated autism</footer>
 
     <script>
         function openProxy() {
