--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 </head>
 <body>
 
-    <h1>Daniel Ward</h1>
+    <h1>DanielLarsonNYC13</h1>
     <!-- Image added here -->
 <img id="headerImage" src="dlrrecords.png" alt="Your Image">
 
