--- a/index.html
+++ b/index.html
@@ -64,7 +64,6 @@
             opacity: 0.6;
         }
 
-        /* Loading spinner styling */
         #loadingSpinner {
             display: none;
             margin-top: 20px;
@@ -84,9 +83,8 @@
             100% { transform: rotate(360deg); }
         }
 
-        /* Image styling */
         #headerImage {
-            width: 60%; /* You can adjust the size */
+            width: 60%; /*size*/
             max-width: 600px;
             border-radius: 10px;
             margin-bottom: 20px;
@@ -96,7 +94,6 @@
 <body>
 
     <h1>DanielLarsonNYC13</h1>
-    <!-- Image added here -->
 <img id="headerImage" src="dlrrecords.png" alt="Your Image">
 
     <div class="container">
@@ -104,7 +101,6 @@
         <input type="text" id="urlInput" placeholder="https://example.com">
         <button onclick="openProxy()">Go</button>
         
-        <!-- Loading Spinner -->
         <div id="loadingSpinner">
             <div class="spinner"></div>
         </div>
@@ -116,13 +112,11 @@
         function openProxy() {
             let url = document.getElementById("urlInput").value;
             if (!url.startsWith("http")) {
-                url = "https://" + url; // Ensure correct format
+                url = "https://" + url; 
             }
 
-            // Show the loading spinner when the button is clicked
             document.getElementById("loadingSpinner").style.display = "block";
 
-            // Pass the URL as a query parameter to the Cloudflare Worker
             window.location.href = "https://wandering-brook-a82e.riley-berry2109.workers.dev/?url=" + encodeURIComponent(url);
         }
     </script>
