--- a/index.html
+++ b/index.html
@@ -89,12 +89,29 @@
             border-radius: 10px;
             margin-bottom: 20px;
         }
+        
+        .side-image {
+            position: absolute;
+            top: 20%;
+            width: 150px;
+            height: auto;
+        }
+
+        .left {
+            left: 10px;
+        }
+
+        .right {
+            right: 10px;
+        }
     </style>
 </head>
 <body>
 
     <h1>DanielLarsonNYC13</h1>
 <img id="headerImage" src="dlrrecords.png" alt="Your Image">
+<img src="https://example.com/left-image.png" class="side-image left" alt="Left Image">
+<img src="https://example.com/right-image.png" class="side-image right" alt="Right Image">
 
     <div class="container">
         <p>Enter the website URL you want to access:</p>
