--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
     <h1>DanielLarsonNYC13</h1>
 <img id="headerImage" src="dlrrecords.png" alt="Your Image">
-<img src="https://example.com/left-image.png" class="side-image left" alt="Left Image">
+<img src="freaky.jpg" class="side-image left" alt="Left Image">
 <img src="https://example.com/right-image.png" class="side-image right" alt="Right Image">
 
     <div class="container">
