--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <h1>DanielLarsonNYC13</h1>
 <img id="headerImage" src="dlrrecords.png" alt="Your Image">
 <img src="freaky.jpg" class="side-image left" alt="Left Image">
-<img src="https://example.com/right-image.png" class="side-image right" alt="Right Image">
+<img src="Screenshot 2024-04-08 194104.png" class="side-image right" alt="Right Image">
 
     <div class="container">
         <p>Enter the website URL you want to access:</p>
