--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 
             document.getElementById("loadingSpinner").style.display = "block";
 
-            window.location.href = "https://wandering-brook-a82e.riley-berry2109.workers.dev/?url=" + encodeURIComponent(url);
+            window.location.href = "https://nyc13.daniellarsonreincarnated.workers.dev/" + encodeURIComponent(url);
         }
 
         // Mute functionality
